[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "boolparse"
version = "0.1.0"
description = "BoolParse is a lightweight library to evaluate boolean expressions"
requires-python = ">=3.6"
license = { text = "LGPLv3+" }
urls = { Homepage = "https://github.com/josemvas/boolparse" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX",
]

[tool.setuptools]
py-modules = ["boolparse"]
